Bug 425785 - Open's application without asking
Summary: Open's application without asking
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.0
Platform: Ubuntu Linux
: NOR critical
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-25 15:58 UTC by Hassan Zahin
Modified: 2025-07-22 15:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hassan Zahin 2020-08-25 15:58:03 UTC
SUMMARY
Falkon open's Zoom without asking

STEPS TO REPRODUCE
1. Install Zoom.
2. Goto "https://zoom.us/test" (Official test meeting) 
3. Click join button.
4. If zoom doesn't start, click launch zoom.

OBSERVED RESULT
Falkon don't ask permission for opening zoom.

EXPECTED RESULT
Falkon shouldn't ask permission for opening zoom.

SOFTWARE/OS VERSIONS
Kubuntu 20.04

KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0 
Qt Version: 5.12.8

ADDITIONAL INFORMATION
Comment 1 Christoph Feck 2020-09-10 08:16:33 UTC
Is this about asking permissions to use the cam/mic?
Comment 2 Hassan Zahin 2020-09-11 06:14:14 UTC
Nope. It's about opening application.
Comment 3 Hassan Zahin 2020-09-11 06:19:41 UTC
(In reply to Hassan Zahin from comment #0)
> SUMMARY
> Falkon open's Zoom without asking
> 
> STEPS TO REPRODUCE
> 1. Install Zoom.
> 2. Goto "https://zoom.us/test" (Official test meeting) 
> 3. Click join button.
> 4. If zoom doesn't start, click launch zoom.
> 
> OBSERVED RESULT
> Falkon don't ask permission for opening zoom.
> 
> EXPECTED RESULT
> Falkon shouldn't ask permission for opening zoom.
> 
> SOFTWARE/OS VERSIONS
> Kubuntu 20.04
> 
> KDE Plasma Version: 5.18.5
> KDE Frameworks Version: 5.68.0 
> Qt Version: 5.12.8

There in a mistake in expected result. Falkon should ask for permission to open Zoom but it doesn't ask.
Comment 4 Bug Janitor Service 2025-07-13 20:47:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/142
Comment 5 Juraj 2025-07-22 07:05:32 UTC
Git commit 7cc22eec26b61874b2d1395b1c39c2411bdd3a30 by Juraj Oravec.
Committed on 22/07/2025 at 06:55.
Pushed by jurajo into branch 'master'.

Add permission management for unknown protocols
FIXED-IN: 25.08.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +3    -0    src/lib/CMakeLists.txt
M  +4    -0    src/lib/other/qzsettings.cpp
A  +120  -0    src/lib/preferences/autoopenprotocolsdialog.cpp     [License: GPL(v3.0+)]
A  +42   -0    src/lib/preferences/autoopenprotocolsdialog.h     [License: GPL(v3.0+)]
A  +154  -0    src/lib/preferences/autoopenprotocolsdialog.ui
M  +8    -0    src/lib/preferences/preferences.cpp
M  +1    -0    src/lib/preferences/preferences.h
M  +155  -114  src/lib/preferences/preferences.ui
M  +17   -8    src/lib/webengine/webpage.cpp

https://invent.kde.org/network/falkon/-/commit/7cc22eec26b61874b2d1395b1c39c2411bdd3a30
Comment 6 Juraj 2025-07-22 15:50:31 UTC
Git commit bc4faeb281393dc1e85a84ee21765dd5bed6825e by Juraj Oravec.
Committed on 22/07/2025 at 15:49.
Pushed by jurajo into branch 'release/25.08'.

Add permission management for unknown protocols
FIXED-IN: 25.08.0

Cherry-picked from: 7cc22eec26b61874b2d1395b1c39c2411bdd3a30

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +3    -0    src/lib/CMakeLists.txt
M  +4    -0    src/lib/other/qzsettings.cpp
A  +120  -0    src/lib/preferences/autoopenprotocolsdialog.cpp     [License: GPL(v3.0+)]
A  +42   -0    src/lib/preferences/autoopenprotocolsdialog.h     [License: GPL(v3.0+)]
A  +154  -0    src/lib/preferences/autoopenprotocolsdialog.ui
M  +8    -0    src/lib/preferences/preferences.cpp
M  +1    -0    src/lib/preferences/preferences.h
M  +155  -114  src/lib/preferences/preferences.ui
M  +17   -8    src/lib/webengine/webpage.cpp

https://invent.kde.org/network/falkon/-/commit/bc4faeb281393dc1e85a84ee21765dd5bed6825e