Add permission management for unknown protocols

BUG: 425785
FIXED-IN: 25.08.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>